tests/snapshots/cli__doctor_redundant_config_after.snap
---
source: tests/cli.rs
expression: sandbox.config_contents()
snapshot_kind: text
---
{
  "aliases": {
    "<root>": [
      "vitest"
    ]
  },
  "projects": {
    "vitest": {
      "test": "echo vitest"
    }
  }
}
