tests/snapshots/cli__double_dash_escape.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"--\", \"greet\", \"hello\"])"
---
exit code: 0
----- stdout -----
hello
