tests/snapshots/cli__edit_local_runs.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"build\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
edited-build
