tests/snapshots/cli__inherited_from_parent.snap
---
source: tests/cli.rs
expression: "sandbox.taco_in(&sandbox.nested(), &[\"greet\"])"
---
exit code: 0
----- stdout -----
from-parent
