tests/snapshots/cli__local_command_inherited.snap
---
source: tests/cli.rs
expression: "sandbox.taco_in(&sandbox.nested(), &[\"build\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
local-build
