tests/snapshots/cli__local_command_print.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"print\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Available commands:

<root>/project/.taco.json
  └─ taco build
     echo local-build

1 command
